sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  annotations:
    external-dns.alpha.kubernetes.io/hostname: sonarr.crt.house
    nginx.org/websocket-services: sonarr
spec:
  ingressClassName: nginx-crt-house
  rules:
  - host: sonarr.crt.house
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr
            port:
              number: 8989
  tls:
  - hosts:
    - sonarr.crt.house
